Fetch the missing mail bodies in offline mode (requires fixed in Akonadi server and Akonadi client libraries as well to work).

BUG: 264629
BUG: 255578
BUG: 286047

FIXED-IN: 4.11